@@ -197,7 +197,7 @@ decanal,NA,CH3(CH2)8CHO,aq,SS93,NA,1993-01-14,cal,-16600,-95290,86.6,204.5,170.1
 "azelaic acid",NA,C9H16O4,aq,Sho95,NA,1992-06-16,cal,-163660,-240700,101.6,143.8,161.8,23.9348,47.5253,-6.2031,-4.7436,125.8045,9.2464,0.0862,0
 "sebacic acid",NA,C10H18O4,aq,Sho95,NA,1992-06-16,cal,-161240,-246000,108.3,165,177.6,26.1119,52.4558,-7.3146,-4.9474,143.1573,11.341,0.1306,0
 formate,NA,HCO2-,aq,Sho95,NA,1992-02-28,cal,-83862,-101680,21.7,-22,26.16,5.7842,4.7242,7.363,-2.9742,17,-12.4,1.3003,-1
-acetate,NA,C2H3O2-,aq,Sho95,NA,1992-02-28,cal,-88270,-116160,20.6,6.2,40.5,7.7525,8.6996,7.5825,-3.1385,26.3,-3.86,1.3182,-1
+acetate,CH3COO-,C2H3O2-,aq,Sho95,NA,1992-02-28,cal,-88270,-116160,20.6,6.2,40.5,7.7525,8.6996,7.5825,-3.1385,26.3,-3.86,1.3182,-1
 propanoate,NA,C3H5O2-,aq,Sho95,NA,1992-02-28,cal,-86780,-122630,26.5,30.9,54.95,9.6992,12.1344,9.0612,-3.2805,52.3,-4.2,1.2276,-1
 n-butanoate,NA,C4H7O2-,aq,Sho95,NA,1992-06-17,cal,-84650,-128630,31.8,44.5,70.3,11.7724,17.0492,7.4458,-3.4837,62.3135,-3.5666,1.1469,-1
 n-pentanoate,NA,C5H9O2-,aq,Sho95,NA,1992-06-17,cal,-82630,-134380,38.3,70.3,86.31,13.9304,24.8456,-1.0403,-3.806,86.5816,-3.2539,1.0496,-1
@@ -680,3 +680,18 @@ resorcinol,NA,C6H6O2,aq,LA19,NA,2019-05-30,J,-236100,-355100,232.2,253.8,89.8,58
 phloroglucinol,NA,C6H6O3,aq,LA19,NA,2019-05-30,J,-421100,-558200,274.1,193.1,93.33,61.16,151,-108.6,-17.87,245.7,-21.74,0.9125,0
 "cyclohexane carboxylate",NA,C7H11O2-,aq,LA19,NA,2019-05-30,J,-299800,-562900,146.8,292.7,110.1,170.96,12.91,-471.5,8.765,328,5.707,5.142,-1
 "cyclohexane carboxylic acid",NA,C7H12O2,aq,LA19,NA,2019-05-30,J,-323700,-563300,225.9,449.4,122.2,175.86,24.31,-474.8,8.294,372.8,36.31,-0.3117,0
+palmitate,NA,C16H31O2-,aq,LA16,NA,2021-03-16,J,-241200,-821500,441,NA,NA,230.4,183.5,166,-106.8,1089,107.5,5.1,-1
+oleate,NA,C18H35O2-,aq,LA16,NA,2021-03-16,J,-140300,-740000,517.9,NA,NA,211.8,295.3,35.2,-81.3,1008,202.1,1.1,-1
+palmitoleate,NA,C16H29O2-,aq,LA16,NA,2021-03-16,J,-159000,-950400,415,NA,NA,278.3,89.6,322.6,-146.6,1304,32.2,9.2,-1
+myristate,NA,C14H27O2-,aq,LA16,NA,2021-03-16,J,-260000,-774000,390.2,NA,NA,201.2,165.5,140.1,-92.6,955,88.3,5.1,-1
+β-hydroxymyristate,beta-hydroxymyristate,C14H27O3-,aq,LA16,NA,2021-03-16,J,-409200,-945500,418.3,NA,NA,201.4,165.9,140,-92.6,970,88.5,4.7,-1
+glycerol,NA,C3H8O3,aq,LA16,NA,2021-03-16,J,-502700,-684400,238.5,NA,NA,64.9,26.4,34.4,-20.7,264,13,-0.4,0
+heptose,NA,C7H14O7,aq,LA16,NA,2021-03-16,J,-1238400,-1698300,382.1,NA,NA,147.6,10.6,41.6,-23.2,488,-8.2,-4.9,0
+rhamnose,NA,C6H12O5,aq,LA16,NA,2021-03-16,J,-751300,-1076700,238.9,NA,NA,108.8,32.8,47.8,-27.2,508,-49.4,0.8,0
+glucoseamine,NA,C6H13NO5,aq,LA16,NA,2021-03-16,J,-712700,-1076600,271,NA,NA,108.8,33.3,71,-30.3,484,-67.8,0.3,0
+N-acetylglucosamine,NA,C8H15NO6,aq,LA16,NA,2021-03-16,J,-918200,-1329000,358.2,NA,NA,144.1,40.5,36.1,-33.7,570,-58.6,0.8,0
+"N-acetylmuramic acid",NA,C11H17NO8,aq,LA16,NA,2021-03-16,J,-1272400,-1789500,485.4,NA,NA,185.8,57.1,64.7,-48,685,-55.7,0.3,0
+ethanolamine,NA,C2H7NO,aq,LA16,NA,2021-03-16,J,-138300,-281000,173.2,NA,NA,47.7,26.4,52.4,-18.3,218,-6.7,-1,0
+"diaminopimelic acid",NA,C7H14N2O4,aq,LA16,NA,2021-03-16,J,-673500,-925900,347.2,NA,NA,59.7,145.2,-10.5,-13.3,215,-6.6,-0.4,0
+putrescine,NA,C4H12N2,aq,LA16,NA,2021-03-16,J,48200,-99500,140.5,NA,NA,52.4,33.5,65.6,-25.4,242,8.8,-0.8,0
+spermidine,NA,C7H19N3,aq,LA16,NA,2021-03-16,J,114900,-170500,248.7,NA,NA,96.2,61,127.5,-49.8,420,19.2,-1.4,0
