@@ -117,6 +117,10 @@
 "OBIGT",853,"Zn(CO3)2-2","aq","cal",,,-4724
 "OBIGT",854,"Cu(CO3)2-2","aq","cal",,,-4929
 "OBIGT",855,"Pb(CO3)2-2","aq","cal",,,-6676
+"OBIGT",857,"KCO3-","aq","cal",,,4996
+"OBIGT",859,"RbCO3-","aq","cal",,,-533
+"OBIGT",862,"MnHCO3+","aq","cal",,,945
+"OBIGT",870,"KHCO3","aq","cal",,,3759
 "OBIGT",872,"CH4","aq","cal",-2.61,,
 "OBIGT",877,"hexane","aq","cal",1.43,3.21,
 "OBIGT",880,"ethylene","aq","cal",6.12,-3.82,
@@ -229,51 +233,59 @@
 "OBIGT",1522,"n-butanethiol","aq","cal",2.19,,
 "OBIGT",1544,"methyldiethanolamine","aq","cal",1.61,,
 "OBIGT",1547,"dimethylamine","aq","J",-8.05,,
-"OBIGT",1561,"cysteinate","aq","cal",-1,,
-"OBIGT",1587,"glucose","aq","cal",1.11,,
-"OBIGT",1615,"guanine","aq","cal",-4.26,,
-"OBIGT",1659,"dHUMP-","aq","cal",-3.13,,
-"OBIGT",1756,"MgADP-","aq","cal",-1.01,,
-"OBIGT",1767,"HNicMP(ox)","aq","cal",,9.4,
-"OBIGT",1775,"ribose-5-phosphate","aq","cal",,7.48,
-"OBIGT",1777,"ribose-5-phosphate-2","aq","cal",1.53,,
-"OBIGT",1778,"H4NADP(red)","aq","cal",1.73,,
-"OBIGT",1779,"H3NADP(red)-","aq","cal",2.41,,
-"OBIGT",1780,"H2NADP(red)-2","aq","cal",1.28,,
-"OBIGT",1781,"HNADP(red)-3","aq","cal",2.09,,
-"OBIGT",1782,"NADP(red)-4","aq","cal",1.09,,
-"OBIGT",1784,"H3NADP(ox)","aq","cal",1.05,,
-"OBIGT",1855,"diglycine+","aq","cal",-177.69,,
-"OBIGT",1856,"diglycine-","aq","cal",-49.22,,565
-"OBIGT",1857,"triglycine+","aq","cal",,1.75,
-"OBIGT",1858,"triglycine-","aq","cal",,1.78,
-"OBIGT",1917,"hydromagnesite","cr","cal",,,-2569
-"OBIGT",1994,"jarosite","cr","cal",,,20697
-"OBIGT",1995,"natrojarosite","cr","cal",,,17554
-"OBIGT",2003,"realgar,alpha","cr","J",,,768
-"OBIGT",2004,"realgar,beta","cr","J",,,989
-"OBIGT",2005,"orpiment","cr","J",,,-1036
-"OBIGT",2013,"dawsonite","cr","J",,,19466
-"OBIGT",2015,"ferberite","cr","J",1.21,,
-"OBIGT",2028,"Co-pentlandite","cr","cal",,,-3630
-"OBIGT",2049,"octadecane","cr","cal",-2.63,,
-"OBIGT",2050,"nonadecane","cr","cal",-13.32,,
-"OBIGT",2051,"eicosane","cr","cal",-2.79,,
-"OBIGT",2052,"heneicosane","cr","cal",-8.61,,
-"OBIGT",2053,"docosane","cr","cal",-2.63,,
-"OBIGT",2054,"tricosane","cr","cal",-5.22,,
-"OBIGT",2055,"tetracosane","cr","cal",-2.02,,
-"OBIGT",2056,"pentacosane","cr","cal",-2.93,,
-"OBIGT",2057,"hexacosane","cr","cal",-1.29,,
-"OBIGT",2058,"heptacosane","cr","cal",-1.23,,
-"OBIGT",2110,"carbazole","cr","cal",-43.39,,
-"OBIGT",2151,"triphenylene","cr","cal",,,541
-"OBIGT",2464,"deoxyadenosine","cr","cal",,,-2977
-"OBIGT",2622,"ethylene","gas","cal",-4.59,,
-"OBIGT",2632,"3,5-dimethylphenol","gas","cal",,,628
-"OBIGT",2942,"nonacontane","liq","cal",,,635
-"OBIGT",2949,"2-methyloctane","liq","cal",10,,
-"OBIGT",3362,"5,6-dithiadecane","liq","cal",2,,
+"OBIGT",1554,"oleate","aq","J",,,39179
+"OBIGT",1555,"palmitoleate","aq","J",,,-242150
+"OBIGT",1559,"heptose","aq","J",,,-75027
+"OBIGT",1563,"N-acetylmuramic acid","aq","J",,,-38589
+"OBIGT",1564,"ethanolamine","aq","J",,,4598
+"OBIGT",1565,"diaminopimelic acid","aq","J",,,108258
+"OBIGT",1566,"putrescine","aq","J",,,108157
+"OBIGT",1567,"spermidine","aq","J",,,108263
+"OBIGT",1576,"cysteinate","aq","cal",-1,,
+"OBIGT",1602,"glucose","aq","cal",1.11,,
+"OBIGT",1630,"guanine","aq","cal",-4.26,,
+"OBIGT",1674,"dHUMP-","aq","cal",-3.13,,
+"OBIGT",1771,"MgADP-","aq","cal",-1.01,,
+"OBIGT",1782,"HNicMP(ox)","aq","cal",,9.4,
+"OBIGT",1790,"ribose-5-phosphate","aq","cal",,7.48,
+"OBIGT",1792,"ribose-5-phosphate-2","aq","cal",1.53,,
+"OBIGT",1793,"H4NADP(red)","aq","cal",1.73,,
+"OBIGT",1794,"H3NADP(red)-","aq","cal",2.41,,
+"OBIGT",1795,"H2NADP(red)-2","aq","cal",1.28,,
+"OBIGT",1796,"HNADP(red)-3","aq","cal",2.09,,
+"OBIGT",1797,"NADP(red)-4","aq","cal",1.09,,
+"OBIGT",1799,"H3NADP(ox)","aq","cal",1.05,,
+"OBIGT",1870,"diglycine+","aq","cal",-177.69,,
+"OBIGT",1871,"diglycine-","aq","cal",-49.22,,565
+"OBIGT",1872,"triglycine+","aq","cal",,1.75,
+"OBIGT",1873,"triglycine-","aq","cal",,1.78,
+"OBIGT",1932,"hydromagnesite","cr","cal",,,-2569
+"OBIGT",2009,"jarosite","cr","cal",,,20697
+"OBIGT",2010,"natrojarosite","cr","cal",,,17554
+"OBIGT",2018,"realgar,alpha","cr","J",,,768
+"OBIGT",2019,"realgar,beta","cr","J",,,989
+"OBIGT",2020,"orpiment","cr","J",,,-1036
+"OBIGT",2028,"dawsonite","cr","J",,,19466
+"OBIGT",2030,"ferberite","cr","J",1.21,,
+"OBIGT",2043,"Co-pentlandite","cr","cal",,,-3630
+"OBIGT",2064,"octadecane","cr","cal",-2.63,,
+"OBIGT",2065,"nonadecane","cr","cal",-13.32,,
+"OBIGT",2066,"eicosane","cr","cal",-2.79,,
+"OBIGT",2067,"heneicosane","cr","cal",-8.61,,
+"OBIGT",2068,"docosane","cr","cal",-2.63,,
+"OBIGT",2069,"tricosane","cr","cal",-5.22,,
+"OBIGT",2070,"tetracosane","cr","cal",-2.02,,
+"OBIGT",2071,"pentacosane","cr","cal",-2.93,,
+"OBIGT",2072,"hexacosane","cr","cal",-1.29,,
+"OBIGT",2073,"heptacosane","cr","cal",-1.23,,
+"OBIGT",2125,"carbazole","cr","cal",-43.39,,
+"OBIGT",2166,"triphenylene","cr","cal",,,541
+"OBIGT",2479,"deoxyadenosine","cr","cal",,,-2977
+"OBIGT",2637,"ethylene","gas","cal",-4.59,,
+"OBIGT",2647,"3,5-dimethylphenol","gas","cal",,,628
+"OBIGT",2957,"nonacontane","liq","cal",,,635
+"OBIGT",2964,"2-methyloctane","liq","cal",10,,
+"OBIGT",3377,"5,6-dithiadecane","liq","cal",2,,
 "DEW",8,"AlO2(SiO2)-","aq","cal",,,-897
 "DEW",17,"BO(OH)","aq","cal",,,-1111
 "DEW",19,"Ca(HCO3)+","aq","cal",,,-2971
